# hass-gaggiuino

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  hacs.json  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/templates/: release_template.md
.github/workflows/: checks.yml  release_draft.yml  validate.yml
blueprints/: BLUEPRINTS.md  README.md
blueprints/automation/: gaggiuino_heated_up.yaml
config/: configuration.yaml
custom_components/gaggiuino/: __init__.py  binary_sensor.py  common.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  number.py  select.py  sensor.py  switch.py
custom_components/gaggiuino/translations/: en.json
