[project]
name = "hass-gaggiuino"
version = "2025.5.2"  # Do not forget to change this in the manifest.json
description = "Home Assistant HACS Integration for Gagggiuino"
readme = "README.md"
requires-python = ">=3.14.2"  # follows https://github.com/home-assistant/core/blob/dev/pyproject.toml#L25
dependencies = [  # Do not forget to change this in the manifest.json
    "gaggiuino-api==0.1.13",
]

[dependency-groups]
dev = [
    "homeassistant>=2025.6.2",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["custom_components.gaggiuino"]

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
